--- a/device/delta/x86_64-delta_ag9032v2-r0/Delta-ag9032v2/port_config.ini
+++ b/device/delta/x86_64-delta_ag9032v2-r0/Delta-ag9032v2/port_config.ini
@@ -1,34 +1,35 @@
-# name          lanes             alias        
-Ethernet0        49,50,51,52      Ethernet1/1  
-Ethernet4        53,54,55,56      Ethernet2/1  
-Ethernet8        65,66,67,68      Ethernet3/1  
-Ethernet12       69,70,71,72      Ethernet4/1  
-Ethernet16       81,82,83,84      Ethernet5/1  
-Ethernet20       85,86,87,88      Ethernet6/1  
-Ethernet24       1,2,3,4          Ethernet7/1  
-Ethernet28       101,102,103,104  Ethernet8/1  
-Ethernet32       5,6,7,8          Ethernet9/1  
-Ethernet36       17,18,19,20      Ethernet10/1 
-Ethernet40       21,22,23,24      Ethernet11/1 
-Ethernet44       33,34,35,36      Ethernet12/1 
-Ethernet48       37,38,39,40      Ethernet13/1 
-Ethernet52       97,98,99,100     Ethernet14/1 
-Ethernet56       113,114,115,116  Ethernet15/1 
-Ethernet60       117,118,119,120  Ethernet16/1 
-Ethernet64       129,130,131,132  Ethernet17/1 
-Ethernet68       133,134,135,136  Ethernet18/1 
-Ethernet72       145,146,147,148  Ethernet19/1 
-Ethernet76       209,210,211,212  Ethernet20/1 
-Ethernet80       213,214,215,216  Ethernet21/1 
-Ethernet84       225,226,227,228  Ethernet22/1 
-Ethernet88       229,230,231,232  Ethernet23/1 
-Ethernet92       241,242,243,244  Ethernet24/1 
-Ethernet96       245,246,247,248  Ethernet25/1 
-Ethernet100      157,158,159,160  Ethernet26/1 
-Ethernet104      161,162,163,164  Ethernet27/1 
-Ethernet108      165,166,167,168  Ethernet28/1 
-Ethernet112      177,178,179,180  Ethernet29/1 
-Ethernet116      181,182,183,184  Ethernet30/1 
-Ethernet120      193,194,195,196  Ethernet31/1 
-Ethernet124      197,198,199,200  Ethernet32/1 
-Ethernet128      61,62,63,64      Ethernet33/1 
+# name          lanes                 alias
+Ethernet0       41,42,43,44           hundredGigE1/1
+Ethernet4       45,46,47,48           hundredGigE1/2
+Ethernet8       49,50,51,52           hundredGigE1/3
+Ethernet12      37,38,39,40           hundredGigE1/4
+Ethernet16      33,34,35,36           hundredGigE1/5
+Ethernet20      53,54,55,56           hundredGigE1/6
+Ethernet24      57,58,59,60           hundredGigE1/7
+Ethernet28      61,62,63,64           hundredGigE1/8
+Ethernet32      65,66,67,68           hundredGigE1/9
+Ethernet36      69,70,71,72           hundredGigE1/10
+Ethernet40      73,74,75,76           hundredGigE1/11
+Ethernet44      77,78,79,80           hundredGigE1/12
+Ethernet48      81,82,83,84           hundredGigE1/13
+Ethernet52      85,86,87,88           hundredGigE1/14
+Ethernet56      89,90,91,92           hundredGigE1/15
+Ethernet60      93,94,95,96           hundredGigE1/16
+Ethernet64      97,98,99,100          hundredGigE1/17
+Ethernet68      101,102,103,104       hundredGigE1/18
+Ethernet72      105,106,107,108       hundredGigE1/19
+Ethernet76      109,110,111,112       hundredGigE1/20
+Ethernet80      121,122,123,124       hundredGigE1/21
+Ethernet84      113,114,115,116       hundredGigE1/22
+Ethernet88      1,2,3,4               hundredGigE1/23
+Ethernet92      117,118,119,120       hundredGigE1/24
+Ethernet96      5,6,7,8               hundredGigE1/25
+Ethernet100     125,126,127,128       hundredGigE1/26
+Ethernet104     29,30,31,32           hundredGigE1/27
+Ethernet108     9,10,11,12            hundredGigE1/28
+Ethernet112     13,14,15,16           hundredGigE1/29
+Ethernet116     25,26,27,28           hundredGigE1/30
+Ethernet120     17,18,19,20           hundredGigE1/31
+Ethernet124     21,22,23,24           hundredGigE1/32
+Ethernet128     129                   hundredGigE1/33
+Ethernet132     130                   hundredGigE1/34
